--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -21,7 +21,7 @@ body {
   background: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb {
-  background: $light-grey;
+  background: $pink;
 }
 ::-webkit-scrollbar-thumb:hover {
   background: $primary-color;
